# bot_schedule

./: .code-workspace.code-workspace  .gitignore  README.md  bot_schedule.code-workspace  memes.json  pyproject.toml
schedule bot/: main.py  schedule.db  бот расписания2.py  создание баз.py
schedule bot/handlers/: admin.py  start.py  test.py
schedule bot/utils/: db.py
schedule_bot/: bases.py  filters.py  main.py  memes.json  nohup.out  schedule.db  бот расписания2.py  создание баз.py
schedule_bot/handlers/: __init__.py  admin.py  callback_classes.py  callbacks.py  commands.py  config.py  duties.py  reminders.py  schedule.py  shift_closing.py  shifts.py  start.py  states.py  test.py  update_or_delete_db.py
schedule_bot/utils/: db.py
