[project]
name = "bot-schedule"
version = "0.1.0"
description = ""
authors = [
    {name = "uznagayo",email = "uznagato@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.4"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
